@@ -9,6 +9,7 @@ require("prototypes.buildings.duct-t-junction")
 require("prototypes.buildings.duct-underground")
 require("prototypes.buildings.non-return-duct")
 
+require("prototypes.item-subgroups")
 require("prototypes.technologies")
 require("prototypes.tips-and-tricks")
 
