@@ -1,0 +1,8 @@
+data:extend({
+  {
+    type = "item-subgroup",
+    name = "ducts",
+    group = "logistics",
+    order = "da",
+  },
+})
