@@ -2,6 +2,7 @@
 Version: 1.4.2
 Date: ????
   Changes:
+    - Moved ducts to a dedicated item subgroup. (#32)
     - Updated lighting on sprites to blend in better with other Factorio entities. (#36)
     - Updated technology icon. (#36)
   Bugfixes:
